// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding blocks Should insert content using the placeholder and the regular inserter 1`] = `
"<!-- wp:paragraph -->
<p>Paragraph block</p>
<!-- /wp:paragraph -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Quote block</p></blockquote>
<!-- /wp:quote -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`adding blocks Should insert content using the placeholder and the regular inserter 2`] = `
"<!-- wp:paragraph -->
<p>Paragraph block</p>
<!-- /wp:paragraph -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Quote block</p></blockquote>
<!-- /wp:quote -->"
`;

exports[`adding blocks Should insert content using the placeholder and the regular inserter 3`] = `
"<!-- wp:paragraph -->
<p>Paragraph block</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Quote block</p></blockquote>
<!-- /wp:quote -->

<!-- wp:preformatted -->
<pre class=\\"wp-block-preformatted\\">Pre text

Foo</pre>
<!-- /wp:preformatted -->

<!-- wp:shortcode -->
[myshortcode]With multiple
lines preserved[/myshortcode]
<!-- /wp:shortcode -->"
`;

exports[`adding blocks inserts a block in proper place after having clicked \`Browse All\` from block appender 1`] = `
"<!-- wp:group -->
<div class=\\"wp-block-group\\"><div class=\\"wp-block-group__inner-container\\"><!-- wp:paragraph -->
<p>Paragraph inside group</p>
<!-- /wp:paragraph --></div></div>
<!-- /wp:group -->

<!-- wp:paragraph -->
<p>Paragraph after group</p>
<!-- /wp:paragraph -->"
`;

exports[`adding blocks inserts a block in proper place after having clicked \`Browse All\` from inline inserter 1`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:heading -->
<h2>Heading</h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Third paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`adding blocks inserts a block in proper place after having clicked \`Browse All\` from inline inserter 2`] = `
"<!-- wp:paragraph -->
<p>First paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:cover -->
<div class=\\"wp-block-cover has-background-dim\\"><div class=\\"wp-block-cover__inner-container\\"></div></div>
<!-- /wp:cover -->

<!-- wp:heading -->
<h2>Heading</h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Third paragraph</p>
<!-- /wp:paragraph -->"
`;

exports[`adding blocks inserts blocks at root level when using the root appender while selection is in an inner block 1`] = `
"<!-- wp:buttons -->
<div class=\\"wp-block-buttons\\"><!-- wp:button -->
<div class=\\"wp-block-button\\"><a class=\\"wp-block-button__link\\">1.1</a></div>
<!-- /wp:button --></div>
<!-- /wp:buttons -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;
